@@ -1,3 +1,10 @@
+2010-05-14  Phil Muldoon  <pmuldoon@redhat.com>
+
+ 	PR python/11482
+
+	* python/py-value.c (valpy_hash): New function.
+	(value_object_type): Register valpy_hash.
+
 2010-05-14  Hui Zhu  <teawater@gmail.com>
             Michael Snyder  <msnyder@vmware.com>
 
